Boot: Replace flash partitioning terminology
This change replaces the slot 0/1 terminology with
primary/secondary slot and replaces FLASH_AREA_IMAGE_0/1
with FLASH_AREA_IMAGE_PRIMARY/SECONDARY. This naming
convention fits better to platforms with multiple images
and it is also an architecture agnostic alternative.

Change-Id: I5def429a076024831a702700736d9769a0b2301f
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -167,9 +167,9 @@ elseif (TFM_NS_CLIENT_IDENTIFICATION)
 endif()
 
 # For the non-swapping BL2 configuration two executables need to be built.
-# One can be executed from flash partition slot_0 and other from slot_1.
-# Only the linking phase is different. This function captures common settings
-# and eliminates copy-paste.
+# One can be executed from the primary slot flash partition and other from the
+# secondary slot. Only the linking phase is different. This function captures
+# common settings and eliminates copy-paste.
 function(set_up_app_build)
 	set( _OPTIONS_ARGS)                                                            #Option (on/off) arguments (e.g. IGNORE_CASE)
 	set( _ONE_VALUE_ARGS NS_TARGET S_TARGET FULL_BIN SIGN_BIN VENEER_NAME POSTFIX) #Single option arguments (e.g. PATH "./foo/bar")
