--- a/secure_fw/services/platform/manifest.yaml
+++ b/secure_fw/services/platform/manifest.yaml
@@ -21,7 +21,15 @@
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
-    }
+    },
+    {
+      "sfid": "TFM_SP_PLATFORM_PIN_SERVICE_SFID",
+      "signal": "TFM_SP_PLATFORM_PIN_SERVICE",
+      "tfm_symbol": "platform_sp_pin_service",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+     }
   ],
   "source_files": [
     "platform_sp.c",
