Test: Add isolation level 2 test cases
The following isolation level 2 test cases are added:
1. PSA RoT accesses APP RoT memory directly, positive test.
2. APP RoT accesses PSA RoT memory directly, negative test. This test
   case causes 'MemManage Fault' and is disabled as default. Enable
   this case by defining 'TFM_IPC_ISOLATION_2_APP_ACCESS_PSA_MEM'.
3. PSA RoT writes to APP RoT read-only memory directly, negative test.
   This test case causes 'MemManage Fault' and is disabled as default.
   Defining MACRO 'TFM_IPC_ISOLATION_2_TEST_READ_ONLY_MEM' to enable
   this test case.
4. APP RoT takes PSA RoT memory reference as PSA API parameters,
   negative test. SPM memory checking filters this case out and panic
   so this case is disabled as default. Enable this case by defining
   MACRO 'TFM_IPC_ISOLATION_2_MEM_CHECK'.

Change-Id: Ib8aad380ae36f39117900d06d3c9a9233dd45c8f
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -10,12 +10,54 @@
   "type": "APPLICATION-ROT",
   "priority": "NORMAL",
   "id": "0x00000006",
-  "entry_point": "ipc_client_init",
+  "entry_point": "ipc_client_test_main",
   "stack_size": "0x0200",
   "heap_size": "0",
   "secure_functions": [
   ],
   "tfm_partition_ipc": true,
+  "services" : [
+    {
+      "name": "IPC_CLIENT_TEST_BASIC_SID",
+      "sid": "0x00001100",
+      "signal": "IPC_CLIENT_TEST_BASIC_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM_SID",
+      "sid": "0x00001101",
+      "signal": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SID",
+      "sid": "0x00001102",
+      "signal": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM_SID",
+      "sid": "0x00001103",
+      "signal": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "IPC_CLIENT_TEST_MEM_CHECK_SID",
+      "sid": "0x00001104",
+      "signal": "IPC_CLIENT_TEST_MEM_CHECK_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    }
+  ],
   "source_files": [
     "ipc_client_test.c",
   ],
