--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -8,7 +8,6 @@
 {{utilities.donotedit_warning}}
 
 #include "tfm_secure_api.h"
-#include "tfm_api.h"
 #include "secure_fw/spm/spm_partition_defs.h"
 
 {% for manifest in manifests %}
@@ -17,7 +16,7 @@
     {% endif %}
 /******** {{manifest.manifest.name}} ********/
     {% for sec_func in manifest.manifest.secure_functions %}
-psa_status_t {{sec_func.tfm_symbol}}(struct psa_invec *, size_t, struct psa_outvec *, size_t);
+psa_status_t {{sec_func.tfm_symbol}}(psa_invec *, size_t, psa_outvec *, size_t);
     {% endfor %}
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
@@ -27,9 +26,9 @@ psa_status_t {{sec_func.tfm_symbol}}(struct psa_invec *, size_t, struct psa_outv
 
 #define TFM_VENEER_FUNCTION(partition_name, sfn_name) \
     __tfm_secure_gateway_attributes__ \
-    psa_status_t tfm_##sfn_name##_veneer(struct psa_invec *in_vec, \
+    psa_status_t tfm_##sfn_name##_veneer(psa_invec *in_vec, \
                                          size_t in_len, \
-                                         struct psa_outvec *out_vec, \
+                                         psa_outvec *out_vec, \
                                          size_t out_len) \
     { \
         TFM_CORE_IOVEC_SFN_REQUEST(partition_name##_ID, \
