Build: Make Debug Authentication configurable
Change-Id: I2ede0c329b18b11b9b4592b13e178a3705e745e0
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -98,6 +98,10 @@ elseif (TFM_NS_CLIENT_IDENTIFICATION)
 	target_compile_definitions(${PROJECT_OBJ_LIB} PRIVATE TFM_NS_CLIENT_IDENTIFICATION)
 endif()
 
+if (NOT DEFINED DEBUG_AUTHENTICATION)
+	set(DEBUG_AUTHENTICATION "DAUTH_CHIP_DEFAULT")
+endif()
+
 #Set include directories
 embedded_target_include_directories(TARGET ${PROJECT_OBJ_LIB} PATH ${TFM_ROOT_DIR} ABSOLUTE APPEND)
 
@@ -147,7 +151,7 @@ function(set_up_secure_fw_build)
 	add_dependencies(${EXE_NAME} tfm_attest)
 
 	#Set macro definitions for the project.
-	embedded_set_target_compile_defines(TARGET ${PROJECT_OBJ_LIB} LANGUAGE C DEFINES __thumb2__ __ARM_FEATURE_CMSE=3 TFM_LVL=${TFM_LVL} DAUTH_CHIP_DEFAULT APPEND)
+	embedded_set_target_compile_defines(TARGET ${PROJECT_OBJ_LIB} LANGUAGE C DEFINES __thumb2__ __ARM_FEATURE_CMSE=3 TFM_LVL=${TFM_LVL} ${DEBUG_AUTHENTICATION} APPEND)
 
 	if (REGRESSION OR CORE_TEST OR CORE_IPC)
 		if (DEFINED TFM_PARTITION_TEST_SECURE_SERVICES AND TFM_PARTITION_TEST_SECURE_SERVICES)
