Crypto: Migrate the service to use Mbed crypto library
This patch migrates the TF-M Crypto service to use the
Mbed crypto library version 1.0.0. The regression tests
for Crypto are temporarily disabled to avoid build
failures due to changes in the PSA Crypto API. Some
regression tests for Attestation are disabled as well
as they rely on service-to-service calls to Crypto and
need to use the newer API.

Change-Id: Ic49fd162e89881d7a9e94fa4cddd76fe9a53fa03
Signed-off-by: Jamie Fox <jamie.fox@arm.com>
Co-authored-By: Antonio de Angelis <antonio.deangelis@arm.com>

--- a/secure_fw/services/crypto/CMakeLists.txt
+++ b/secure_fw/services/crypto/CMakeLists.txt
@@ -24,16 +24,15 @@ get_filename_component(TFM_ROOT_DIR "${CRYPTO_DIR}/../../.." ABSOLUTE)
 
 #Get the definition of what files we need to build
 set (ENABLE_CRYPTO ON)
-if (NOT DEFINED CRYPTO_ENGINE_MBEDTLS)
-    set (CRYPTO_ENGINE_MBEDTLS ON)
-endif()
+#The backend of the service is based on Mbed Crypto
+set (CRYPTO_ENGINE_MBEDTLS ON)
 
 if (CRYPTO_ENGINE_MBEDTLS)
-  #Define location of mbed TLS source, build, and installation directory.
-  get_filename_component(MBEDTLS_SOURCE_DIR "${TFM_ROOT_DIR}/../mbedtls" ABSOLUTE)
-  set (MBEDTLS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbedtls")
-  set (MBEDTLS_INSTALL_DIR ${MBEDTLS_BINARY_DIR}/mbedtls_install)
-  set (MBEDTLS_TARGET_NAME "mbedtls_crypto_lib")
+  #Define location of Mbed Crypto source, build, and installation directory.
+  get_filename_component(MBEDTLS_SOURCE_DIR "${TFM_ROOT_DIR}/../mbed-crypto" ABSOLUTE)
+  set (MBEDTLS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbedcrypto")
+  set (MBEDTLS_INSTALL_DIR ${MBEDTLS_BINARY_DIR}/mbedcrypto_install)
+  set (MBEDTLS_TARGET_NAME "mbedcrypto_lib")
 endif()
 
 include(CMakeLists.inc)
@@ -49,44 +48,39 @@ endif()
 list(APPEND TFM_CRYPTO_C_DEFINES_LIST __ARM_FEATURE_CMSE=3 __thumb2__ TFM_LVL=${TFM_LVL})
 
 if (CRYPTO_ENGINE_MBEDTLS)
-  list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_ENGINE_MBEDTLS MBEDTLS_CONFIG_FILE="platform/ext/common/tfm_mbedtls_config.h")
+  list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_ENGINE_MBEDTLS MBEDTLS_CONFIG_FILE="platform/ext/common/tfm_mbedcrypto_config.h")
 endif()
 
-#Add module configuration parameters in case they are provided during cmake configuration step
-if (DEFINED CRYPTO_KEY_STORAGE_NUM)
-  list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_KEY_STORAGE_NUM=${CRYPTO_KEY_STORAGE_NUM})
-endif()
-if (DEFINED CRYPTO_KEY_MAX_KEY_LENGTH)
-  list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_KEY_MAX_KEY_LENGTH=${CRYPTO_KEY_MAX_KEY_LENGTH})
-endif()
+#Add module configuration parameters in case they are provided during CMake configuration step
 if (DEFINED CRYPTO_ENGINE_BUF_SIZE)
   list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_ENGINE_BUF_SIZE=${CRYPTO_ENGINE_BUF_SIZE})
+endif()
+if (DEFINED CRYPTO_CONC_OPER_NUM)
+  list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_CONC_OPER_NUM=${CRYPTO_CONC_OPER_NUM})
 endif()
 if (TFM_PSA_API AND DEFINED CRYPTO_IOVEC_BUFFER_SIZE)
   list(APPEND TFM_CRYPTO_C_DEFINES_LIST TFM_CRYPTO_IOVEC_BUFFER_SIZE=${CRYPTO_IOVEC_BUFFER_SIZE})
 endif()
 
 if (CRYPTO_ENGINE_MBEDTLS)
-  #Set mbed TLS compiler flags
+  #Set Mbed Crypto compiler flags
   set(MBEDTLS_C_FLAGS ${MBEDTLS_C_FLAGS_SERVICES})
+  string(APPEND MBEDTLS_C_FLAGS " -DMBEDTLS_CONFIG_FILE=\\\\\\\"tfm_mbedcrypto_config.h\\\\\\\""
+                                " -I${CMAKE_CURRENT_LIST_DIR}")
 
-  #Set preinclude header options for mbed TLS
-  set(MBEDTLS_PREINCLUDE_PREFIX __tfm_crypto__)
-  set(MBEDTLS_PREINCLUDE_HEADER ${CRYPTO_DIR}/mbedtls_global_symbols.h)
-
-  #Build mbed TLS as external project.
-  #This ensures mbed TLS is built with exactly defined settings.
-  #mbed TLS will be used from its install location
-  include(${TFM_ROOT_DIR}/BuildMbedtls.cmake)
+  #Build Mbed Crypto as external project.
+  #This ensures Mbed Crypto is built with exactly defined settings.
+  #Mbed Crypto will be used from its install location
+  include(${TFM_ROOT_DIR}/BuildMbedCrypto.cmake)
 endif()
 
 #Specify what we build (for the crypto service, build as a static library)
 add_library(tfm_crypto STATIC ${ALL_SRC_ASM} ${ALL_SRC_C})
 embedded_set_target_compile_defines(TARGET tfm_crypto LANGUAGE C DEFINES ${TFM_CRYPTO_C_DEFINES_LIST})
 if (CRYPTO_ENGINE_MBEDTLS)
-  #Add a dependency on the mbed_tls_lib_install target.
+  #Add a dependency on the Mbed Crypto install target.
   add_dependencies(tfm_crypto ${MBEDTLS_TARGET_NAME}_install)
-  #Ask the compiler to merge the mbed TLS and the crypto libraries.
+  #Ask the compiler to merge the Mbed Crypto and crypto service libraries.
   compiler_merge_library(DEST tfm_crypto LIBS "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX_C}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX_C}")
 endif()
 
