--- a/secure_fw/services/crypto/manifest.yaml
+++ b/secure_fw/services/crypto/manifest.yaml
@@ -16,6 +16,14 @@
   "tfm_partition_ipc": true,
   "secure_functions": [
     {
+      "sfid": "TFM_CRYPTO_ALLOCATE_KEY_SFID",
+      "signal": "TFM_CRYPTO_ALLOCATE_KEY",
+      "tfm_symbol": "tfm_crypto_allocate_key",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
       "sfid": "TFM_CRYPTO_IMPORT_KEY_SFID",
       "signal": "TFM_CRYPTO_IMPORT_KEY",
       "tfm_symbol": "tfm_crypto_import_key",
@@ -48,38 +56,6 @@
       "minor_policy": "strict"
     },
     {
-      "sfid": "TFM_CRYPTO_KEY_POLICY_INIT_SFID",
-      "signal": "TFM_CRYPTO_KEY_POLICY_INIT",
-      "tfm_symbol": "tfm_crypto_key_policy_init",
-      "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "strict"
-    },
-    {
-      "sfid": "TFM_CRYPTO_KEY_POLICY_SET_USAGE_SFID",
-      "signal": "TFM_CRYPTO_KEY_POLICY_SET_USAGE",
-      "tfm_symbol": "tfm_crypto_key_policy_set_usage",
-      "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "strict"
-    },
-    {
-      "sfid": "TFM_CRYPTO_KEY_POLICY_GET_USAGE_SFID",
-      "signal": "TFM_CRYPTO_KEY_POLICY_GET_USAGE",
-      "tfm_symbol": "tfm_crypto_key_policy_get_usage",
-      "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "strict"
-    },
-    {
-      "sfid": "TFM_CRYPTO_KEY_POLICY_GET_ALGORITHM_SFID",
-      "signal": "TFM_CRYPTO_KEY_POLICY_GET_ALGORITHM",
-      "tfm_symbol": "tfm_crypto_key_policy_get_algorithm",
-      "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "strict"
-    },
-    {
       "sfid": "TFM_CRYPTO_SET_KEY_POLICY_SFID",
       "signal": "TFM_CRYPTO_SET_KEY_POLICY",
       "tfm_symbol": "tfm_crypto_set_key_policy",
@@ -99,14 +75,6 @@
       "sfid": "TFM_CRYPTO_GET_KEY_LIFETIME_SFID",
       "signal": "TFM_CRYPTO_GET_KEY_LIFETIME",
       "tfm_symbol": "tfm_crypto_get_key_lifetime",
-      "non_secure_clients": true,
-      "minor_version": 1,
-      "minor_policy": "strict"
-    },
-    {
-      "sfid": "TFM_CRYPTO_SET_KEY_LIFETIME_SFID",
-      "signal": "TFM_CRYPTO_SET_KEY_LIFETIME",
-      "tfm_symbol": "tfm_crypto_set_key_lifetime",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
