Build: Decrease secure partition stack and heap size
The image size is too big on MUSCA board which will cause the build
error. This patch is to decrease the stack and heap size of some
partitions to fix it.
- Decrease the stack or heap size of those secure partitions: audit
  logging, core test, core test 2, ipc client, ipc service, and secure
  client service.
- Update the stack size in linker files (auto-created by tools)
  according to the new manifest files which will affect all supported
  platforms.

Change-Id: Iabc3c9f4641001a961cb1b74a5da0247276704ce
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/services/audit_logging/manifest.yaml
+++ b/secure_fw/services/audit_logging/manifest.yaml
@@ -11,8 +11,8 @@
   "priority": "NORMAL",
   "id": "0x00000101",
   "entry_point": "audit_core_init",
-  "stack_size": "0x1000",
-  "heap_size": "0x0400",
+  "stack_size": "0x0200",
+  "heap_size": "0",
   "mmio_regions" : [
     {
       "name": "TFM_PERIPHERAL_UART1",
