--- a/test/test_services/tfm_core_test_2/manifest.yaml
+++ b/test/test_services/tfm_core_test_2/manifest.yaml
@@ -12,8 +12,8 @@
   "id": "0x00000003",
   "entry_point": "core_test_2_init",
   "tfm_partition_ipc": true,
-  "stack_size": "0x0400",
-  "heap_size": "0x0400",
+  "stack_size": "0x0200",
+  "heap_size": "0",
   "secure_functions": [
     {
       "sfid": "TFM_CORE_TEST_2_SFN_SLAVE_SERVICE_SFID",
