--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -12,8 +12,8 @@
   "id": "0x00000002",
   "entry_point": "core_test_init",
   "tfm_partition_ipc": true,
-  "stack_size": "0x0400",
-  "heap_size": "0x0400",
+  "stack_size": "0x0300",
+  "heap_size": "0",
   "mmio_regions": [
     {
       "name": "TFM_PERIPHERAL_FPGA_IO",
