Tools: add IAT verifier.
Add a script for verifying the signatures and structure of Initial
Attestation Tokens.

Change-Id: Ic3649f25c32edd9b08793eb8a77c8b40dd71e8c8
Signed-off-by: Sergei Trofimov <sergei.trofimov@arm.com>

--- a/docs/index.rst.in
+++ b/docs/index.rst.in
@@ -87,6 +87,13 @@ Welcome to TF-M's documentation!
 
     @REJECTED_DD_LIST@
 
+.. toctree::
+    :maxdepth: 2
+    :caption: Tools
+    :glob:
+    :hidden:
+    tools/iat-verifier/*
+
 .. include:: readme.rst
 
 -----------
