Build: remove tfm_partition_ipc from manifests
Secure Partition manifest attribute 'tfm_partition_ipc' is not compliant
with the PSA Firmware Framework specification. Move it to the TF-M
specific tfm_manifest_list.yaml.

Change-Id: Ib1ce3f8416d51bb43cd037a378bd4fb7b67d9bdf
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -399,7 +399,7 @@ SECTIONS
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
 
-    {% if manifest.manifest.tfm_partition_ipc %}
+    {% if manifest.attr.tfm_partition_ipc %}
 #if defined (TFM_PSA_API) || (TFM_LVL != 1)
     .{{manifest.manifest.name}}_STACK : ALIGN(128)
     {
@@ -477,7 +477,7 @@ SECTIONS
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
     Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
 
-    {% if manifest.manifest.tfm_partition_ipc %}
+    {% if manifest.attr.tfm_partition_ipc %}
 #if defined (TFM_PSA_API) || (TFM_LVL != 1)
     .{{manifest.manifest.name}}_STACK : ALIGN(128)
     {
