--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -184,7 +184,7 @@ LR_CODE S_CODE_START {
     {% endif %}
     }
 
-    {% if manifest.manifest.tfm_partition_ipc %}
+    {% if manifest.attr.tfm_partition_ipc %}
 #if defined (TFM_PSA_API) || (TFM_LVL != 1)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
@@ -237,7 +237,7 @@ LR_CODE S_CODE_START {
     {% endif %}
     }
 
-    {% if manifest.manifest.tfm_partition_ipc %}
+    {% if manifest.attr.tfm_partition_ipc %}
 #if defined (TFM_PSA_API) || (TFM_LVL != 1)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
