Build: Remove "tfm_symbol" from manifest
According to PSA FF, the "tfm_symbol" need be removed from the manifest
file. And use "signal" to get the secure function entry. It requests
that the signal name should be the supper case of the secure function
name.

Change-Id: I6ff1fc3011219b7bcd21f89ad893c3f227ef12d0
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/services/audit_logging/manifest.yaml
+++ b/secure_fw/services/audit_logging/manifest.yaml
@@ -23,40 +23,35 @@
   "secure_functions": [
     {
       "sfid": "TFM_AUDIT_RETRIEVE_RECORD_SFID",
-      "signal": "TFM_AUDIT_RETRIEVE_RECORD",
-      "tfm_symbol": "audit_core_retrieve_record",
+      "signal": "AUDIT_CORE_RETRIEVE_RECORD",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_AUDIT_ADD_RECORD_SFID",
-      "signal": "TFM_AUDIT_ADD_RECORD",
-      "tfm_symbol": "audit_core_add_record",
+      "signal": "AUDIT_CORE_ADD_RECORD",
       "non_secure_clients": false,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_AUDIT_GET_INFO_SFID",
-      "signal": "TFM_AUDIT_GET_INFO",
-      "tfm_symbol": "audit_core_get_info",
+      "signal": "AUDIT_CORE_GET_INFO",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_AUDIT_GET_RECORD_INFO_SFID",
-      "signal": "TFM_AUDIT_GET_RECORD_INFO",
-      "tfm_symbol": "audit_core_get_record_info",
+      "signal": "AUDIT_CORE_GET_RECORD_INFO",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_AUDIT_DELETE_RECORD_SFID",
-      "signal": "TFM_AUDIT_DELETE_RECORD",
-      "tfm_symbol": "audit_core_delete_record",
+      "signal": "AUDIT_CORE_DELETE_RECORD",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
