--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -16,40 +16,35 @@
   "secure_functions": [
     {
       "sfid": "TFM_SST_SET_SFID",
-      "signal": "TFM_SST_SET",
-      "tfm_symbol": "tfm_sst_set_req",
+      "signal": "TFM_SST_SET_REQ",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_SST_GET_SFID",
-      "signal": "TFM_SST_GET",
-      "tfm_symbol": "tfm_sst_get_req",
+      "signal": "TFM_SST_GET_REQ",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_SST_GET_INFO_SFID",
-      "signal": "TFM_SST_GET_INFO",
-      "tfm_symbol": "tfm_sst_get_info_req",
+      "signal": "TFM_SST_GET_INFO_REQ",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_SST_REMOVE_SFID",
-      "signal": "TFM_SST_REMOVE",
-      "tfm_symbol": "tfm_sst_remove_req",
+      "signal": "TFM_SST_REMOVE_REQ",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_SST_GET_SUPPORT_SFID",
-      "signal": "TFM_SST_GET_SUPPORT",
-      "tfm_symbol": "tfm_sst_get_support_req",
+      "signal": "TFM_SST_GET_SUPPORT_REQ",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
