--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -16,7 +16,7 @@
     {% endif %}
 /******** {{manifest.manifest.name}} ********/
     {% for sec_func in manifest.manifest.secure_functions %}
-psa_status_t {{sec_func.tfm_symbol}}(psa_invec *, size_t, psa_outvec *, size_t);
+psa_status_t {{sec_func.signal.lower()}}(psa_invec *, size_t, psa_outvec *, size_t);
     {% endfor %}
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
@@ -42,7 +42,7 @@ psa_status_t {{sec_func.tfm_symbol}}(psa_invec *, size_t, psa_outvec *, size_t);
     {% endif %}
 /******** {{manifest.manifest.name}} ********/
     {% for sec_func in manifest.manifest.secure_functions %}
-TFM_VENEER_FUNCTION({{manifest.manifest.name}}, {{sec_func.tfm_symbol}})
+TFM_VENEER_FUNCTION({{manifest.manifest.name}}, {{sec_func.signal.lower()}})
     {% endfor %}
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
