--- a/secure_fw/services/platform/manifest.yaml
+++ b/secure_fw/services/platform/manifest.yaml
@@ -16,16 +16,14 @@
   "secure_functions": [
     {
       "sfid": "TFM_SP_PLATFORM_SYSTEM_RESET_SFID",
-      "signal": "TFM_SP_PLATFORM_SYSTEM_RESET",
-      "tfm_symbol": "platform_sp_system_reset",
+      "signal": "PLATFORM_SP_SYSTEM_RESET",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
     },
     {
       "sfid": "TFM_SP_PLATFORM_IOCTL_SFID",
-      "signal": "TFM_SP_PLATFORM_IOCTL",
-      "tfm_symbol": "platform_sp_ioctl",
+      "signal": "PLATFORM_SP_IOCTL",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
