Build: Change the type of non_secure_clients
According to PSA FF, the correct type of 'non_secure_clients' should
be Boolean.

Change-Id: Iddca5bb54dc14e311c6dfdafbe4cc55c8d9552c2
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/services/crypto/manifest.yaml
+++ b/secure_fw/services/crypto/manifest.yaml
@@ -321,7 +321,7 @@
       "name": "TFM_CRYPTO",
       "sid": "0x00004000",
       "signal": "TFM_CRYPTO_SIG",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
