--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -20,7 +20,7 @@
       "name": "IPC_SERVICE_TEST_BASIC",
       "sid": "0x00001000",
       "signal": "IPC_SERVICE_TEST_BASIC_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -28,7 +28,7 @@
       "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM",
       "sid": "0x00001001",
       "signal": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -36,7 +36,7 @@
       "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM",
       "sid": "0x00001002",
       "signal": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -44,7 +44,7 @@
       "name": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM",
       "sid": "0x00001003",
       "signal": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     }
