--- a/test/test_services/tfm_core_test_2/manifest.yaml
+++ b/test/test_services/tfm_core_test_2/manifest.yaml
@@ -67,7 +67,7 @@
       "name": "SPM_CORE_TEST_2_SLAVE_SERVICE",
       "sid": "0x00002200",
       "signal": "SPM_CORE_TEST_2_SLAVE_SERVICE_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -75,7 +75,7 @@
       "name": "SPM_CORE_TEST_2_CHECK_CALLER_CLIENT_ID",
       "sid": "0x00002201",
       "signal": "SPM_CORE_TEST_2_CHECK_CALLER_CLIENT_ID_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -83,7 +83,7 @@
       "name": "SPM_CORE_TEST_2_GET_EVERY_SECOND_BYTE",
       "sid": "0x00002202",
       "signal": "SPM_CORE_TEST_2_GET_EVERY_SECOND_BYTE_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -91,7 +91,7 @@
       "name": "SPM_CORE_TEST_2_INVERT",
       "sid": "0x00002203",
       "signal": "SPM_CORE_TEST_2_INVERT_SIGNAL",
-      "non_secure_clients": "true",
+      "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
     },
@@ -99,7 +99,7 @@
     "name": "SPM_CORE_TEST_2_PREPARE_TEST_SCENARIO",
     "sid": "0x00002204",
     "signal": "SPM_CORE_TEST_2_PREPARE_TEST_SCENARIO_SIGNAL",
-    "non_secure_clients": "true",
+    "non_secure_clients": true,
     "minor_version": 1,
     "minor_policy": "STRICT"
     },
@@ -107,7 +107,7 @@
     "name": "SPM_CORE_TEST_2_EXECUTE_TEST_SCENARIO",
     "sid": "0x00002205",
     "signal": "SPM_CORE_TEST_2_EXECUTE_TEST_SCENARIO_SIGNAL",
-    "non_secure_clients": "true",
+    "non_secure_clients": true,
     "minor_version": 1,
     "minor_policy": "STRICT"
     },
